@@ -1,3 +1,9 @@
+2003-05-14  John W. Eaton  <jwe@bevo.che.wisc.edu>
+
+	* kpse.cc (kpse_path_iterator::next): Skip consecutive colons here.
+	(kpse_path_iterator::set_end): Don't miss last element when not
+	followed by a colon.
+
 2003-05-11  John W. Eaton  <jwe@bevo.che.wisc.edu>
 
 	* Array-idx.h (Array<T>::index): Fix off-by-one error.
